[gd_scene load_steps=2 format=3 uid="uid://c5w2h7q3g6y0x"]

[ext_resource type="Script" path="res://Scripts/UI/user_info_display.gd" id="1_83a3p"]

[node name="UserInfoDisplay" type="HBoxContainer"]
script = ExtResource("1_83a3p")

[node name="UsernameLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "Player"
vertical_alignment = 1

[node name="UserMoneyLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "$0"
horizontal_alignment = 2
vertical_alignment = 1
